feat(contact): added new section to contact page adn adjusted some texts

--- a/src/locales/en/obj_about.json
+++ b/src/locales/en/obj_about.json
@@ -15,7 +15,7 @@
     "process": [
       {
         "id": 1,
-        "title": "Understanding the pain",
+        "title": "Understanding the motivation",
         "description": "Everything starts with a good conversation. I listen to your ideas, understand your needs and motivations, translate them into something practical, and think about the best way to turn them into something visually appealing and functional."
       },
       {
