--- a/src/locales/es/obj_about.json
+++ b/src/locales/es/obj_about.json
@@ -15,7 +15,7 @@
     "process": [
       {
         "id": 1,
-        "title": "Entendiendo el problema",
+        "title": "Entendiendo la motivación",
         "description": "Todo comienza con una buena conversación. Escucho tus ideas, comprendo tus necesidades y motivaciones, las traduzco en algo práctico y pienso en la mejor forma de convertirlas en algo visualmente atractivo y funcional."
       },
       {
