--- a/src/locales/pt/obj_about.json
+++ b/src/locales/pt/obj_about.json
@@ -15,7 +15,7 @@
     "process": [
       {
         "id": 1,
-        "title": "Entendendo a dor",
+        "title": "Entendendo a motivação",
         "description": "Tudo começa com uma boa conversa. Ouço suas ideias, entendo suas necessidades, motivações, as traduzo em algo prático e penso na melhor forma de transformá-las em algo visualmente atrativo e funcional."
       },
       {
