fix(texts): adjusted home texts

--- a/src/locales/pt/obj_home.json
+++ b/src/locales/pt/obj_home.json
@@ -8,7 +8,7 @@
     "Faixa Marrom de Jiu Jitsu"
   ],
 
-  "description": "Atualmente sou instrutor na <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu - Pelotas</a></b> e Engenheiro de Software Sênior & Tech Lead na <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b> focado em desenvolvimento frontend, atuando como um parceiro de tecnologia e auxiliando a construir a próxima geração de aplicações web.",
+  "description": "Atualmente sou Engenheiro de Software Sênior & Tech Lead na <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b> focado em desenvolvimento frontend, atuando como um parceiro de tecnologia e auxiliando a construir a próxima geração de aplicações web. Nas horas vagas também sou instrutor na <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu - Pelotas</a></b>.",
   "location": "Pelotas - RS, Brasil",
   "experience": "+10 anos experiência",
   "projects": "+50 projetos desenvolvidos",
