--- a/src/locales/es/obj_home.json
+++ b/src/locales/es/obj_home.json
@@ -8,7 +8,7 @@
     "Cinturón Marrón de Jiu Jitsu"
   ],
 
-  "description": "Actualmente soy instructor en <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu - Pelotas</a></b> y Ingeniero de Software Senior & Tech Lead en <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b> centrado en el desarrollo frontend, trabajando como compañero tecnológico y ayudando a construir la próxima generación de aplicaciones web.",
+  "description": "Actualmente soy Ingeniero de Software Senior & Tech Lead en <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b> centrado en el desarrollo frontend, trabajando como compañero tecnológico y ayudando a construir la próxima generación de aplicaciones web. En mi tiempo libre, también soy instructor en <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu - Pelotas</a></b>.",
   "location": "Pelotas - RS, Brasil",
   "experience": "+10 años de experiencia",
   "projects": "+50 proyectos desarrollados",
