--- a/src/locales/es/obj_about.json
+++ b/src/locales/es/obj_about.json
@@ -10,7 +10,7 @@
   },
 
   "skills": {
-    "title": "De la imaginación al deploy",
+    "title": "De la Imaginación al impacto",
     "subtitle": "Una mirada a mi proceso para convertir ideas en productos digitales",
     "process": [
       {
@@ -54,15 +54,9 @@
   },
 
   "site": {
-    "title": "Café, código y deploy",
+    "title": "Café, código & deploy",
     "subtitle": "Un resumen técnico de las tecnologías y herramientas que hacen que este sitio tenga mi esencia — todo lo que ocurrió detrás de los clics.",
     "description": "Este sitio fue desarrollado utilizando conceptos de <b><a href='https://www.lukew.com/ff/entry.asp?1117' target='_blank'>Mobile First</a></b>, con el framework <b><a href='https://nextjs.org/' target='_blank'>Next.js</a></b>, deployment realizado en <b><a href='https://vercel.com/' target='_blank'>Vercel</a></b>, estilizado con <b><a href='https://tailwindcss.com/' target='_blank'>Tailwind</a></b>, animaciones hechas con <b><a href='https://motion.dev/' target='_blank'>Framer-Motion</a></b> e íconos proporcionados por la librería <b><a href='https://react-icons.github.io/react-icons/' target='_blank'>React Icons</a></b>. La tipografía utilizada es del estilo <b><a href='https://fonts.google.com/specimen/Maven+Pro' target='_blank'>MavenPro</a></b>. Además, este portafolio funciona como vitrina de contenidos futuros y laboratorio de pruebas — donde experimento con librerías y herramientas — y reúne algunos de mis ",
     "projects": "proyectos."
-  },
-
-  "contact": {
-    "title": "Listo para un pull request de ideas",
-    "description": "Estoy abierto a nuevos proyectos, consultorías o intercambiar ideas sobre creación de productos digitales o desarrollo de juegos. Siéntete libre de enviarme un mensaje en <b><a href='https://www.linkedin.com/in/ffzanini/' target='_blank'>LinkedIn</a></b> o dejar un mensaje en la ",
-    "contact": "página de contacto."
   }
 }
