--- a/src/locales/pt/obj_contact.json
+++ b/src/locales/pt/obj_contact.json
@@ -2,7 +2,7 @@
   "title": "Chama no inbox digital",
   "sub_title": "Fica à vontade pra me chamar por aqui ou lá no <b><a href='https://www.linkedin.com/in/ffzanini/' target='_blank'>LinkedIn</a></b>. Tô sempre disponível pra trocar ideia sobre desenvolvimento, projetos e o que mais surgir. Bora se conectar e conversar!",
   "form": {
-    "title": "Manda um salve!",
+    "title": "Manda um alô!",
     "sub_title": "Nenhum middleware entre a gente — vamos conversar.",
     "name": "Seu nome",
     "email": "E-mail",
